my first commit

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="index.html">WebDevOneTwoThree</a>
+      <a class="navbar-brand" href="index.html">Webpage</a>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="gallery.html">Gallery</a>
+            <a class="nav-link" href="gallery.html">Not a Gallery</a>
           </li>
 		   <li class="nav-item">
             <a class="nav-link" href="cont.html">Contributor</a>
