--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="gallery.html">Gallery</a>
+            <a class="nav-link" href="gallery.html">Photo Gallery</a>
           </li>
 		   <li class="nav-item">
             <a class="nav-link" href="cont.html">Contributor</a>
