--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 					<img class="d-block img-fluid" src="images/NDMC/2.png" alt="Second slide">
 					  <div class="carousel-caption text-left">
 						<div class="transbox">
-							<h3>Drupal</h3>
-								<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+							<h3>Nothing but tacos</h3>
+								<p>Como e esta mi pendehos?</p>
 								</div>
 								<br></br>
 								<br><button type="button" class="btn btn-primary">Sign-up Now</button></br>
