--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<img class="d-block img-fluid" src="images/NDMC/2.png" alt="Second slide">
 					  <div class="carousel-caption text-left">
 						<div class="transbox">
-							<h3>Drupal</h3>
+							<h3>Jenny</h3>
 								<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
 								</div>
 								<br></br>
@@ -120,7 +120,7 @@
 					<div class="card-header" role="tab" id="headingOne">
 					  <h5 class="mb-0">
 						<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-						  Drupal
+						  Jenny
 						</a>
 					  </h5>
 					</div>
@@ -135,7 +135,7 @@
 					<div class="card-header" role="tab" id="headingTwo">
 					  <h5 class="mb-0">
 						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-						  SASS
+						  Gwapa
 						</a>
 					  </h5>
 					</div>
