--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					  <div class="carousel-caption text-left">
 						<div class="transbox">
 							<h3>Nothing but tacos</h3>
-								<p>Como e esta mi pendehos??</p>
+								<p>Como e esta mi pendehos???</p>
 								</div>
 								<br></br>
 								<br><button type="button" class="btn btn-primary">Sign-up Now</button></br>
