--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 				<!--form -->
 				<form>
 				  <div class="form-group">
-					<h3 style="margin-top:30px">Suggestions</h3>
+					<h3 style="margin-top:30px">Form input</h3>
 					<label for="exampleInputEmail1">Email address</label>
 					<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
 					<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
