--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 					<img class="d-block img-fluid" src="images/NDMC/1.png" alt="First slide">
 					  <div class="carousel-caption">
 						<div class="transbox">
-							<h3>Notre Dame of Midsayap College 1</h3>
-								<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+							<h3>Nut</h3>
+								<p><a href="plshalp.html">For the love of god, help me</a> dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
 								</div>
 								<br></br>
 								<br><button type="button" class="btn btn-primary">Sign-up Now</button></br>
