--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 		   <li class="nav-item">
             <a class="nav-link" href="cont.html">Contributor</a>
           </li>
+		  <li class="nav-item">
+            <a class="nav-link" href="page1.html">Page</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>
